--- a/css/css.css
+++ b/css/css.css
@@ -4,7 +4,7 @@
     --oscuro: #000;
     --primario: #4B56D2 ;
     --secundario: #82C3EC;
-    --tercero; #D6E4E5;
+    --tercero: #b6d6d8;
     --fuente-principal: 3.8rem;
 }
 
@@ -15,28 +15,54 @@ head{
 body{
     font-size: 16px;
     font-family:'Krub', sans-serif;
+    box-sizing: border-box;
+    background-image: linear-gradient(to top, var(--tercero) 0%, var(--blanco)100%);
 }
-.titulo{
-    text-align: center;
+
+*, *:before, *:after {
+    box-sizing: inherit;
+}
+
+h1 {
     font-size: 3.8rem;
+}
+
+h2 {
+    font-size: 2.8rem;
+}
+
+h3 {
+    font-size: 1.8rem;
+}
+
+h1, h2, h3 {
+    text-align: center;
+}
+
+.sombra{
+    -webkit-box-shadow: 0px 5px 13px -3px rgba(0,0,0,0.75);
+-moz-box-shadow: 0px 5px 13px -3px rgba(0,0,0,0.75);
+box-shadow: 0px 5px 13px -3px rgba(0,0,0,0.75);
+    padding: 2rem;
 }
 
 .titulo span{
     font-size: 2rem;
 }
 .contenedor{
-    width: 1200px;
+    max-width: 1200px;
     margin: 0 auto;
-
 }
 .nav-bg {
     background-color: var(--secundario);
 } 
 .navegacion-principal {
     display: flex;
-    justify-content: space-between;
+    flex-direction: column;
 }
 .navegacion-principal a {
+    display: block;
+    text-align: center;
     color: #fff;
     padding: 1rem;
     text-decoration: none;
@@ -46,5 +72,52 @@ body{
 
 .navegacion-principal a:hover{
     background-color: var(--primario);
+    /* color: var(--oscuro); */
+}
+.hero {
+    background-image: url(../img/hero.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 450px;
+    position: relative;
+}
+.contenido-hero {
+    position: absolute;
+    background-color: rgb(0 0 0 / 70%);
+    width: 100%;
+    height: 100%;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
 
+.contenido-hero h2,
+.contenido-hero p {
+    color: var(--blanco)
+}
+
+.boton {
+    background-color: var(--primario);
+    color: var(--blanco);
+    padding: 1rem 3rem;
+    margin-top: 1rem;
+    font-size: 2rem;
+    text-decoration: none;
+    text-transform: uppercase;
+    font-weight: bold;
+    border-radius: .5rem;
+    width: 90%;
+    text-align: center;
+}
+
+@media (min-width: 768px) {
+    .navegacion-principal{
+        flex-direction: row;
+        justify-content: space-between;
+    }
+    .boton {
+        width: auto;
+    }
+}
